--- a/README
+++ b/README
@@ -16,3 +16,7 @@ several of them using the Restructured Text markup notation.
 Please read the Documentation/process/changes.rst file, as it contains the
 requirements for building and running the kernel, and information about
 the problems which may result by upgrading your kernel.
+
+GNR PO bkc-v0.3
+===============
+1. Move to intel-next based on 5.19.0
