tools/testing/crypto/iaa: [NOT FOR UPSTREAM] Update trace processing
Remove length deferral for by_n trace processing because store trace
calls are now only made once per stored page.

Also add processing for the compressed size recorded for load trace
calls.

Signed-off-by: Heath Caldwell <heath.caldwell@intel.com>

--- a/tools/testing/crypto/iaa/README
+++ b/tools/testing/crypto/iaa/README
@@ -50,7 +50,11 @@ argument specifies the location to store the results):
 And then you can summarize the results with summarize.sh.
 For example:
 
-./summarize.sh ~/results/subject/01
+# For a summary of latency values:
+./summarize.sh ~/results/subject/01 _lat_stats.csv
+
+# For a summary of size values:
+./summarize.sh ~/results/subject/01 _size_stats.csv
 
 Notes:
 
